display temperature in C° to one decimal

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <input type="text" name="query">
     <input type="submit" value="submit">
   </form>
+  <p id="temperature"></p>
 </body>
 </html>
