--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="script.js" defer></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="output.css">
   <title>Document</title>
 </head>
 <body>
+  <div class="container mx-auto">
   <form>
     <label for="query">Enter a city</label>
-    <input type="text" name="query">
+    <input type="text" name="query" class="input input-bordered w-full max-w-xs">
     <input type="submit" value="submit">
   </form>
   <p id="temperature"></p>
+</div>
 </body>
 </html>
