add more weather data

--- a/index.html
+++ b/index.html
@@ -6,30 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="script.js" defer></script>
   <link rel="stylesheet" href="output.css">
+  <script src="https://kit.fontawesome.com/b62510f54c.js" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
 <body>
-  <div class="container flex flex-col items-center mx-auto pt-36">
+  <div class="container flex flex-col items-center mx-auto pt-36 space-y-8">
     <form class="flex space-x-2 items-center">
       <label for="query">Enter a city</label>
       <input type="text" name="query" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-80 p-2.5 ">
       <input type="submit" value="Submit" class="text-black border border-black bg-transparent focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-24 px-5 py-2.5 text-center">
     </form>
-    <div class="p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md ">
-      <div class="flex items-end space-x-6">
+    <div class="p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md space-y-4">
+      <div class="flex space-x-6">
         <p id="date"></p>
         <p id="time"></p>
       </div>
-
       <div class="flex items-end space-x-6">
         <p id="city" class="text-5xl"></p>
         <p id="temperature" class="text-3xl"></p>
       </div>
-      
-
-      
-      <p id="wind-speed"></p>
-      <p id="humidity"></p>
+      <div class="flex justify-evenly space-x-6">
+        <p id="wind-speed"></p>
+        <p id="humidity"></p>
+      </div>
+      <div class="flex justify-evenly space-x-6">
+        <p id="sunrise"></p>
+        <p id="sunset"></p>
+      </div>
     </div>
   </div>
   <div class="bottom-0 right-0 fixed">Photo credits : <a href="https://unsplash.com/@paititi">Guillaume Galtier</a></div>
