--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <input type="text" name="query" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-80 p-2.5 ">
       <input type="submit" value="Submit" class="text-black border border-black bg-transparent focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-24 px-5 py-2.5 text-center">
     </form>
-    <div class="p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md space-y-4">
+    <div class="p-6 max-w-sm bg-white rounded-lg border border-gray-200 shadow-md space-y-4" id="card">
+
       <div class="flex space-x-6">
         <p id="date"></p>
         <p id="time"></p>
@@ -24,6 +25,9 @@
       <div class="flex items-end space-x-6">
         <p id="city" class="text-5xl"></p>
         <p id="temperature" class="text-3xl"></p>
+      </div>
+      <div class="flex justify-center">
+        <p id="description"></p>
       </div>
       <div class="flex justify-evenly space-x-6">
         <p id="wind-speed"></p>
